# prep

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  history.rs  lib.rs  main.rs  refiner.rs  templates.rs  ui.rs
src/providers/: anthropic.rs  mod.rs  ollama_cloud.rs  ollama_local.rs  openai.rs
